Polishing the logic, moved logic to the syntax service, added comments and readme